# lightnvr-modif

./: .last-upstream-commit  CMakeLists.txt  changed_files.txt
.github/: Sync_Upstream.yml
.github/workflows/: Sync-Upstream  Sync-Upstream-FINAL.yml  Sync-Upstream-LightNVR.yml  Sync-Upstream.yml
src/video/go2rtc/: go2rtc_integration.c  go2rtc_stream.c
src/web/: api_handlers_auth_backend_agnostic.c  api_handlers_system.c  api_handlers_users_backend_agnostic.c  libuv_api_handlers.c
web/: package-lock.json
web/js/: fetch-utils.js
web/js/components/preact/: HLSVideoCell.jsx  LoginView.jsx  MSEVideoCell.jsx  PTZControls.jsx  SystemView.jsx  WebRTCVideoCell.jsx  WebRTCView.jsx
web/js/components/preact/settings/: AdvancedTab.jsx
web/js/components/preact/system/: SystemControls.jsx
web/js/pages/: index-page.jsx
web/js/utils/: auth-utils.js
